...
        case userName
        case passcode
    }
    // call back when user change text
    
    open var userInterActionCallback: UserInterActionCallback?
    internal lazy var userNameTextField = TextFiled().configure(placeHolder: "Enter username").returnKey(.next).contentType(.username)
    internal lazy var passCodeTextField = TextFiled().configure(placeHolder: "Enter passcode", isSeure: true).returnKey(.done).contentType(.password)
    internal lazy var loginButton = Button().configure(title: "Login",backGroundImage: UIImage.init(named: "loginBtnBg"))

    let theme: LoginTheme

    init(theme: LoginTheme) {
        self.theme = theme
...
