...
            isFavItemDeleted = false
        }
    }
    override func viewDidLoad() {
        super.viewDidLoad()
        self.view.backgroundColor = theme.backGroundColor
        self.title = "User List"
        //TODO need to used in viewmodel not here
        NotificationCenter.default.addObserver(self, selector: #selector(self.deleteFavoriteUser(_:)), name: Notification.Name(rawValue: "deleteFavoriteItem") , object: nil)
        self.setFavoriteButton()
        self.designUI()
        fetchingUserList()
        // Do any additional setup after loading the view.
...
                isFavItemDeleted = true
               }
           }
    }
    // MARK: Set favorite button on navigation bar
    fileprivate func setFavoriteButton() {
        let favorite =  UIBarButtonItem(title: "favourite", style: .plain, target: self, action: #selector(addTapped))
        favorite.tintColor = UIColor().textDisplayColor
        self.navigationItem.rightBarButtonItem = favorite
    }
    @objc fileprivate func addTapped() {
        navigator?.navigate(to: .favoriteList(favoriteList: viewModel.getFavItemList()))
    }
...
