...
                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0L-Jn-N7y">
                                        <rect key="frame" x="227" y="0.0" width="40" height="82"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="cay-EU-r2p"/>
                                        </constraints>
                                        <color key="tintColor" name="textDisplayColor"/>
                                        <state key="normal" image="suit.heart" catalog="system"/>
                                        <state key="selected" image="heart.fill" catalog="system"/>
                                        <connections>
                                            <action selector="fabiConClick" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZeY-vq-nHw"/>
                                        </connections>
                                    </button>
                                </subviews>
...
